recursion.cons.lessons.recursion.cons.Occurrence.scala.error
occurences:6: error: type mismatch;
 found   : Unit
 required: Int
    c=c+1
     ^