recursion.cons.lessons.recursion.cons.Occurrence.scala.code
def occurences(l:List[Int], v:Int): Int = {
  var c=0
  if (l==Nil) {
    return c
  } else if (l.head==v) {
    c=c+1
  } else occurences(l.tail,v)
}